sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:2: error: ';' expected but '=' found.
def combSort() {gap:Int=getValueCount();test:Boolean=false
                       ^AlgCombSort:2: error: ';' expected but '=' found.
def combSort() {gap:Int=getValueCount();test:Boolean=false
                                                    ^AlgCombSort:5: error: '(' expected but identifier found.
while (i+gap<getValueCount()) {if isSmaller(i+gap, i) {swap(i+gap, i); test=false}; i=i+1}
                                  ^AlgCombSort:5: error: illegal start of simple expression
while (i+gap<getValueCount()) {if isSmaller(i+gap, i) {swap(i+gap, i); test=false}; i=i+1}
                                                                                  ^